test/error/StReturnType.fu
public static class Test
{
	public static bool Run()
	{
		return int; //ERROR: 'int' is not an expression
	}
}
